fix(style): prevent page overflow
Pages with wide horizontal content could horizontally scroll on mobile due to `.page-wrapper` not having fixed width in f851142fb295d1d6a32810bd328de99d5c6321a9

Re-add overflow-wrap which was removed in e6dba41f3dfb81eeaef8546d5e50a864d53c3fe7 (in attempt to simplify logic).

Add horizontal scroll to unresponsive Plotly charts.

Also, refactor chart style and refactor callout styles into dedicated file.

This commit attempts to fix https://discord.com/channels/722225264733716590/742863504515793149/774343154949816350

--- a/wowchemy/assets/scss/wowchemy/_content.scss
+++ b/wowchemy/assets/scss/wowchemy/_content.scss
@@ -137,7 +137,7 @@ article .article-metadata {
 
 @mixin word-wrap() {
   // Break very long words such as pasted URL strings.
-  //overflow-wrap: break-word;
+  overflow-wrap: break-word;
   word-wrap: break-word;
   //-ms-word-break: break-all;
   //word-break: break-all;
